// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden relief exports > keeps emblem geometry reproducible 1`] = `"9ff3934d19c07080c010a7047cfeec190e9a5e78052a2d3f604a455d72fec3b8"`;

exports[`golden relief exports > keeps emblem geometry reproducible 2`] = `
{
  "contour": 100,
  "triangles": 47388,
}
`;

exports[`golden relief exports > keeps wordmark geometry reproducible 1`] = `"03e6aa42fae583d3f8519fb8f57a35661c9fd2b334907b53b88a1df8f8cc04d0"`;

exports[`golden relief exports > keeps wordmark geometry reproducible 2`] = `
{
  "contour": 100,
  "triangles": 22524,
}
`;
